# SimpleMath

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  readme.md
PublicInterface/: BinaryInterface.hpp  CommonTypes.hpp  Context.hpp  Errors.hpp  Expression.hpp  SimpleMath.hpp
Sandbox/: CMakeLists.txt  Sandbox.cpp
Test/: CMakeLists.txt  CustomAlloc.cpp  ErrorCheck.cpp  ExternalFunctions.cpp  ExternalVariables.cpp  Functions.cpp  Scalars.cpp  Scalars.h  TestBase.hpp  Vectors.cpp  test.cpp
